--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
               id="number"
               class="form__input form__input--num"
               name="number"
+              step="0.000000000000001"
               placeholder="0"
               required
             />
@@ -40,6 +41,7 @@
                 class="form__input form__input--compl"
                 name="real-part"
                 placeholder="0"
+                step="0.000000000000001"
                 required
               />
               <span class="form__deskr changesLang">Действительная часть</span>
@@ -71,6 +73,7 @@
                 name="complex-part"
                 class="form__input form__input--compl"
                 placeholder="0"
+                step="0.000000000000001"
                 required
               />
               <span class="form__deskr changesLang">Мнимая часть</span>
